--- a/forum/src/main/resources/templates/top.html
+++ b/forum/src/main/resources/templates/top.html
@@ -39,7 +39,7 @@
         <div class="comment-button">
             <form method="post" th:action="@{/comment/{id}(id=${content.id})}" th:object="${formModel}">
                 <label>返信内容</label>
-                <textarea class="tweet-box" size="20" th:field="*{content}" maxlength="200" /></textarea><br/>
+                <textarea class="tweet-box" size="20" th:field="*{comment}" maxlength="200" /></textarea><br/>
                 <input type="submit" value="返信" />
             </form>
         </div>
