--- a/forum/src/main/resources/templates/new.html
+++ b/forum/src/main/resources/templates/new.html
@@ -13,6 +13,9 @@
     <form method="post" action="/add" th:object="${formModel}">
       <div class="form-area">
         <label>投稿内容</label>
+        <div class="errorMessages" th:each="errors : ${#fields.errors('content')}">
+          <span th:text="${errors}"/>
+        </div>
         <textarea class="tweet-box" th:field="*{content}" size="20" maxlength="200" /></textarea><br/>
         <input type="submit" value="投稿" />
       </div>
